# Hackathon-Web-Browser

./: Cargo.toml  LICENSE.md  README.md  a.txt  index.html
examples/: Artificial_intelligence.html  comments.html  lists.html  lorumipsum1.html  lorumipsum2.html  lorumipsum3.html  small_full.html
src/: HTMLParser.rs  ansi_helper.rs  html_adt.rs  html_parser.rs  index.html  main.rs  renderer.rs  requester.rs
