[package]
name = "hackathon_web_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
clap = { version = "3.2.23", features = ["derive"] }
termion = "1.5.6"
regex = "1.7.1"
lazy_static = "1.4.0"
